# ExamplesOfLabsForStudents

./: README.md
BinaryWriteC/: main.c
SmartIntegerType/: CMakeLists.txt  Input1.txt  InputWorkerFileStream.cpp  InputWorkerFileStream.h  InputWorkerStandartStream.cpp  InputWorkerStandartStream.h  OverflowChecks.h  SmartInteger.cpp  SmartInteger.h  info.txt  main.cpp
